--- a/.github/workflows/develop-deploy.yml
+++ b/.github/workflows/develop-deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Logueo en el servidor
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ env.SERVER_HOST }}
+          username: ${{ env.SERVER_USERNAME }
+          key: ${{ env.SSH_PRIVATE_KEY }}
           port: 22
