--- a/.github/workflows/develop-deploy.yml
+++ b/.github/workflows/develop-deploy.yml
@@ -26,6 +26,15 @@ jobs:
         with:
           access_token: ${{ github.token }}
 
+      - name: Get commit hash and use it to create a tag 🐗
+        if: ${{ env.DOCKERHUB_TOKEN && env.DOCKERHUB_REPO && env.DOCKERHUB_USERNAME }}
+        id: image_tag
+        run: |
+          prefix="dev"
+          echo "Getting docker prefix from development"
+          echo "Getting docker image tag using commit hash"
+          echo "IMAGE_TAG=$prefix-$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+
       - name: Logueo en el servidor
         uses: appleboy/ssh-action@master
         with:
@@ -33,3 +42,11 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
+
+      - name: Descargar imagen Docker en el servidor
+        run: |
+          ssh -p 22 ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "docker pull hencor2019/book-finder:${{ steps.image_tag.outputs.IMAGE_TAG }}"
+
+      # - name: Ejecutar imagen Docker en el servidor
+      #   run: |
+      #     ssh -p 22 ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "docker run -d --name book-api -p 3000:3000 --env PORT=3000 hencor2019/book-finder:${{ steps.image_tag.outputs.IMAGE_TAG }}"
