chore(cicd): ✨ Add hostname

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   app:
-    container_name: fiber-service-template
+    container_name: book-file-search
     restart: unless-stopped
     deploy:
       resources:
