--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -4,6 +4,14 @@ name: "Deploy DEV Docker"
 on:
   push:
     branches: ["develop"]
+  pull_request:
+    branches: ["develop"]
+    types:
+      - opened
+      - edited
+      - synchronize
+      - labeled
+      - unlabeled
 
 jobs:
   check_skip:
@@ -55,3 +63,25 @@ jobs:
         run: |
           docker push ${{ env.DOCKERHUB_USERNAME}}/${{ env.DOCKERHUB_REPO }}:${{ steps.image_tag.outputs.IMAGE_TAG }}
           docker push ${{ env.DOCKERHUB_USERNAME}}/${{ env.DOCKERHUB_REPO }}:latest
+
+      - name: Copy service via ssh key
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY  }}
+          port: 22
+          source: ".deployments/service.yml"
+          target: "/book-service"
+
+      - name: Deploy to server 🔧
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script:
+            sudo cd /book-service
+            sudo sed -i 's/COMMIT_SHA/${{ steps.image_tag.outputs.IMAGE_TAG }}/g' service.yml
+            sudo docker-compose -f service.yml up --build -d
