feature(cd): 👷 deploy to server (#5)
* feature(cd): 👷 deploy to server

* fix: 💚 fix cd

* chore: Add service

* chore: Remove from root

* fix: 💚 script

* chore:💚 test change

* chore: Fix CD

* remove: Remove deploy on PR 🔥

---------

Co-authored-by: Henry Cortez <henry.cortez@airlinemro.parts>

--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -55,3 +55,25 @@ jobs:
         run: |
           docker push ${{ env.DOCKERHUB_USERNAME}}/${{ env.DOCKERHUB_REPO }}:${{ steps.image_tag.outputs.IMAGE_TAG }}
           docker push ${{ env.DOCKERHUB_USERNAME}}/${{ env.DOCKERHUB_REPO }}:latest
+
+      - name: Copy service via ssh key 🔧
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_HOST  }}
+          username: ${{ secrets.SERVER_USERNAME  }}
+          key: ${{ secrets.SSH_PRIVATE_KEY  }}
+          port: 22
+          source: ".deployments/service.yml"
+          target: "book-service"
+
+      - name: Deploy to server 🔧
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            cd book-service
+            sed -i 's/\(dev-[a-zA-Z0-9]\{1,7\}\|COMMIT_SHA\)/${{ steps.image_tag.outputs.IMAGE_TAG }}/g' service.yml
+            sudo docker-compose -f service.yml up --build -d
