--- a/.deployments/service.yml
+++ b/.deployments/service.yml
@@ -1,6 +1,11 @@
 services:
   book-service-main:
     image: hencor2019/book-finder:COMMIT_SHA
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/api/v1/healthcheck"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     ports:
       - "${PORTS}:${PORT}"
     deploy:
