--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Setup Go 🐬
         uses: actions/setup-go@v5
         with:
-          go-version: 1.19
+          go-version: 1.22.3
 
   test:
     runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
       - name: Setup Go 🐬
         uses: actions/setup-go@v5
         with:
-          go-version: 1.19
+          go-version: 1.22.3
 
       - name: Run tests ✅
         run: make start.test
@@ -59,8 +59,8 @@ jobs:
       - name: Setup Go 🐬
         uses: actions/setup-go@v5
         with:
-          go-version: 1.19
+          go-version: 1.22.3
 
       - name: Build golang 📦
         run: |
-           go build -o main cmd/app/main.go && find main
+          make build && find main
