--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -62,7 +62,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST  }}
           username: ${{ secrets.SERVER_USERNAME  }}
           key: ${{ secrets.SSH_PRIVATE_KEY  }}
-          port: 22
+          port: ${{ secrets.SSH_PORT }}
           source: ".deployments/service.yml"
           target: "book-service"
 
@@ -72,7 +72,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
+          port: ${{ secrets.SSH_PORT }}
           script: |
             cd book-service
             sed -i 's/\(dev-[a-zA-Z0-9]\{1,7\}\|COMMIT_SHA\)/${{ steps.image_tag.outputs.IMAGE_TAG }}/g' service.yml
