--- a/.github/workflows/deploy-uat.yml
+++ b/.github/workflows/deploy-uat.yml
@@ -1,9 +1,9 @@
 ---
-name: "Deploy DEV Docker"
+name: "Deploy UAT Docker"
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["uat"]
 
 jobs:
   check_skip:
@@ -39,7 +39,7 @@ jobs:
         if: ${{ env.DOCKERHUB_TOKEN && env.DOCKERHUB_REPO && env.DOCKERHUB_USERNAME }}
         id: image_tag
         run: |
-          prefix="dev"
+          prefix="uat"
           echo "Getting docker prefix from development"
           echo "Getting docker image tag using commit hash"
           echo "IMAGE_TAG=$prefix-$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
@@ -64,7 +64,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY  }}
           port: ${{ secrets.SSH_PORT }}
           source: ".deployments/service.yml"
-          target: ".book-service/dev"
+          target: ".book-service/uat"
 
       - name: Deploy to server 🔧
         uses: appleboy/ssh-action@v1.0.3
@@ -74,6 +74,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd .book-service/dev
+            cd .book-service/uat
             sed -i 's/\(dev-[a-zA-Z0-9]\{1,7\}\|COMMIT_SHA\)/${{ steps.image_tag.outputs.IMAGE_TAG }}/g' service.yml
             sudo docker-compose -f service.yml up --build -d
