--- a/.github/workflows/deploy-uat.yml
+++ b/.github/workflows/deploy-uat.yml
@@ -64,7 +64,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY  }}
           port: ${{ secrets.SSH_PORT }}
           source: ".deployments/service.yml"
-          target: ".book-service/uat"
+          target: ".book-services/uat"
 
       - name: Deploy to server 🔧
         uses: appleboy/ssh-action@v1.0.3
@@ -74,6 +74,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd .book-service/uat
+            cd .book-services/uat
             sed -i 's/\(dev-[a-zA-Z0-9]\{1,7\}\|COMMIT_SHA\)/${{ steps.image_tag.outputs.IMAGE_TAG }}/g' service.yml
             sudo docker-compose -f service.yml up --build -d
