--- a/.deployments/service.yml
+++ b/.deployments/service.yml
@@ -1,5 +1,5 @@
 services:
-  book-service-main:
+  book-service-ENV:
     image: hencor2019/book-finder:COMMIT_SHA
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/api/v1/healthcheck"]
